; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/atl100/extr_atl.c_test_typelib.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/atl100/extr_atl.c_test_typelib.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@test_typelib.scrrun_dll_suffixW = internal constant [12 x i8] c"\\scrrun.dll\00", align 1
@test_typelib.mshtml_tlb_suffixW = internal constant [12 x i8] c"\\mshtml.tlb\00", align 1
@.str = private unnamed_addr constant [11 x i8] c"scrrun.dll\00", align 1
@.str.1 = private unnamed_addr constant [27 x i8] c"Could not load scrrun.dll\0A\00", align 1
@S_OK = common dso_local global i64 0, align 8
@.str.2 = private unnamed_addr constant [29 x i8] c"AtlLoadTypeLib failed: %08x\0A\00", align 1
@.str.3 = private unnamed_addr constant [20 x i8] c"unexpected path %s\0A\00", align 1
@.str.4 = private unnamed_addr constant [17 x i8] c"typelib == NULL\0A\00", align 1
@.str.5 = private unnamed_addr constant [11 x i8] c"mshtml.dll\00", align 1
@.str.6 = private unnamed_addr constant [27 x i8] c"Could not load mshtml.dll\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @test_typelib to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_typelib() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca i32*, align 8
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  %6 = call i32* @LoadLibraryA(i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str, i64 0, i64 0))
  store i32* %6, i32** %2, align 8
  %7 = load i32*, i32** %2, align 8
  %8 = icmp ne i32* %7, null
  %9 = zext i1 %8 to i32
  %10 = call i32 (i32, i8*, ...) @ok(i32 %9, i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str.1, i64 0, i64 0))
  store i32* null, i32** %1, align 8
  %11 = load i32*, i32** %2, align 8
  %12 = call i64 @AtlLoadTypeLib(i32* %11, i32* null, i64* %4, i32** %1)
  store i64 %12, i64* %5, align 8
  %13 = load i64, i64* %5, align 8
  %14 = load i64, i64* @S_OK, align 8
  %15 = icmp eq i64 %13, %14
  %16 = zext i1 %15 to i32
  %17 = load i64, i64* %5, align 8
  %18 = call i32 (i32, i8*, ...) @ok(i32 %16, i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str.2, i64 0, i64 0), i64 %17)
  %19 = load i32*, i32** %2, align 8
  %20 = call i32 @FreeLibrary(i32* %19)
  %21 = load i64, i64* %4, align 8
  %22 = call i64 @SysStringLen(i64 %21)
  store i64 %22, i64* %3, align 8
  %23 = load i64, i64* %3, align 8
  %24 = call i64 @ARRAY_SIZE(i8* getelementptr inbounds ([12 x i8], [12 x i8]* @test_typelib.scrrun_dll_suffixW, i64 0, i64 0))
  %25 = icmp ugt i64 %23, %24
  br i1 %25, label %26, label %34

26:                                               ; preds = %0
  %27 = load i64, i64* %4, align 8
  %28 = load i64, i64* %3, align 8
  %29 = add i64 %27, %28
  %30 = call i64 @ARRAY_SIZE(i8* getelementptr inbounds ([12 x i8], [12 x i8]* @test_typelib.scrrun_dll_suffixW, i64 0, i64 0))
  %31 = sub i64 %29, %30
  %32 = call i64 @lstrcmpiW(i64 %31, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @test_typelib.scrrun_dll_suffixW, i64 0, i64 0))
  %33 = icmp ne i64 %32, 0
  br label %34

34:                                               ; preds = %26, %0
  %35 = phi i1 [ false, %0 ], [ %33, %26 ]
  %36 = zext i1 %35 to i32
  %37 = load i64, i64* %4, align 8
  %38 = call i32 @wine_dbgstr_w(i64 %37)
  %39 = call i32 (i32, i8*, ...) @ok(i32 %36, i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.3, i64 0, i64 0), i32 %38)
  %40 = load i64, i64* %4, align 8
  %41 = call i32 @SysFreeString(i64 %40)
  %42 = load i32*, i32** %1, align 8
  %43 = icmp ne i32* %42, null
  %44 = zext i1 %43 to i32
  %45 = call i32 (i32, i8*, ...) @ok(i32 %44, i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.4, i64 0, i64 0))
  %46 = load i32*, i32** %1, align 8
  %47 = call i32 @ITypeLib_Release(i32* %46)
  %48 = call i32* @LoadLibraryA(i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.5, i64 0, i64 0))
  store i32* %48, i32** %2, align 8
  %49 = load i32*, i32** %2, align 8
  %50 = icmp ne i32* %49, null
  %51 = zext i1 %50 to i32
  %52 = call i32 (i32, i8*, ...) @ok(i32 %51, i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str.6, i64 0, i64 0))
  store i32* null, i32** %1, align 8
  %53 = load i32*, i32** %2, align 8
  %54 = call i64 @AtlLoadTypeLib(i32* %53, i32* null, i64* %4, i32** %1)
  store i64 %54, i64* %5, align 8
  %55 = load i64, i64* %5, align 8
  %56 = load i64, i64* @S_OK, align 8
  %57 = icmp eq i64 %55, %56
  %58 = zext i1 %57 to i32
  %59 = load i64, i64* %5, align 8
  %60 = call i32 (i32, i8*, ...) @ok(i32 %58, i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str.2, i64 0, i64 0), i64 %59)
  %61 = load i32*, i32** %2, align 8
  %62 = call i32 @FreeLibrary(i32* %61)
  %63 = load i64, i64* %4, align 8
  %64 = call i64 @SysStringLen(i64 %63)
  store i64 %64, i64* %3, align 8
  %65 = load i64, i64* %3, align 8
  %66 = call i64 @ARRAY_SIZE(i8* getelementptr inbounds ([12 x i8], [12 x i8]* @test_typelib.mshtml_tlb_suffixW, i64 0, i64 0))
  %67 = icmp ugt i64 %65, %66
  br i1 %67, label %68, label %76

68:                                               ; preds = %34
  %69 = load i64, i64* %4, align 8
  %70 = load i64, i64* %3, align 8
  %71 = add i64 %69, %70
  %72 = call i64 @ARRAY_SIZE(i8* getelementptr inbounds ([12 x i8], [12 x i8]* @test_typelib.mshtml_tlb_suffixW, i64 0, i64 0))
  %73 = sub i64 %71, %72
  %74 = call i64 @lstrcmpiW(i64 %73, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @test_typelib.mshtml_tlb_suffixW, i64 0, i64 0))
  %75 = icmp ne i64 %74, 0
  br label %76

76:                                               ; preds = %68, %34
  %77 = phi i1 [ false, %34 ], [ %75, %68 ]
  %78 = zext i1 %77 to i32
  %79 = load i64, i64* %4, align 8
  %80 = call i32 @wine_dbgstr_w(i64 %79)
  %81 = call i32 (i32, i8*, ...) @ok(i32 %78, i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.3, i64 0, i64 0), i32 %80)
  %82 = load i64, i64* %4, align 8
  %83 = call i32 @SysFreeString(i64 %82)
  %84 = load i32*, i32** %1, align 8
  %85 = icmp ne i32* %84, null
  %86 = zext i1 %85 to i32
  %87 = call i32 (i32, i8*, ...) @ok(i32 %86, i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.4, i64 0, i64 0))
  %88 = load i32*, i32** %1, align 8
  %89 = call i32 @ITypeLib_Release(i32* %88)
  ret void
}

declare dso_local i32* @LoadLibraryA(i8*) #1

declare dso_local i32 @ok(i32, i8*, ...) #1

declare dso_local i64 @AtlLoadTypeLib(i32*, i32*, i64*, i32**) #1

declare dso_local i32 @FreeLibrary(i32*) #1

declare dso_local i64 @SysStringLen(i64) #1

declare dso_local i64 @ARRAY_SIZE(i8*) #1

declare dso_local i64 @lstrcmpiW(i64, i8*) #1

declare dso_local i32 @wine_dbgstr_w(i64) #1

declare dso_local i32 @SysFreeString(i64) #1

declare dso_local i32 @ITypeLib_Release(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
